Enhance form layout in Hire Us section; add flex properties for improved structure and alignment; ensure input elements are responsive and centered.; Enhance form layout in Hire Us section; add flex properties for improved structure and alignment; ensure input elements are responsive and centered;CU-868e3b7e3

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -177,6 +177,28 @@
     align-self: stretch;
   }
 
+  .form-data {
+    flex-direction: column;
+    align-items: center;
+    gap: 1.25rem;
+    align-self: stretch;
+  }
+  .input-wrapper,
+  input[type="email"],
+  input[type="text"],
+  .select-wrapper,
+  select,
+  .textarea-wrapper,
+  textarea {
+    width: 100%;
+    display: flex;
+    padding: 0.625rem 0;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 0.625rem;
+    align-self: stretch;
+  }
+
   /*Footer*/
   footer {
     outline: var(--blue-outline);
